# fluxsentinel

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  vercel.json
app/: .env.local.example  next.config.js  package.json  page.tsx  tailwind.config.js
app/src/app/: Nav.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
app/src/app/dashboard/: page.tsx
app/src/app/explorer/: page.tsx
app/src/app/mint/: page.tsx
app/src/components/oracle/: ScoreCard.tsx
app/src/components/ui/: TxToast.tsx
app/src/components/vault/: VaultPanel.tsx
app/src/components/wallet/: WalletButton.tsx  WalletProvider.tsx
app/src/config/: index.ts
app/src/hooks/: useOracle.ts  useVault.ts
app/src/lib/: program.ts
app/src/types/: index.ts
mock-engine/: .env.example  package.json
mock-engine/src/: index.js
programs/circuit_breaker/: Cargo.toml
programs/circuit_breaker/src/: lib.rs
programs/risk_oracle/: Cargo.toml
programs/risk_oracle/src/: lib.rs
programs/rwa_vault/: Cargo.toml
programs/rwa_vault/src/: lib.rs
scripts/: debug-deposit.js  deploy.sh  gen-discriminators.js  initialize.js  setup.sh
